# alpacarust

./: .gitignore  Cargo.toml
chart-overrides/kafka/: myvalues.yaml
src/: main.rs
src/alpaca/: account.rs  alpaca.rs  mod.rs  polygon.rs  positions.rs  tick_data.rs
src/app/: mod.rs
src/appconfig/: mod.rs
src/file/: mod.rs
src/http/client/: mod.rs
src/kafkautil/: consumer.rs  mod.rs  producer.rs
src/models/: mod.rs
src/traits/: traits.rs
src/util/: transform.rs
